package io.github.khaledabushamat.discount.billing.domain;

public enum DiscountType {

    EMPLOYEE,
    AFFILIATE,
    LOYALTY

}