package io.github.khaledabushamat.discount.billing.domain;

public interface FlatDiscountPolicy extends DiscountPolicy {
}