package io.github.khaledabushamat.discount.billing.domain;

public interface PercentageDiscountPolicy extends DiscountPolicy {
}