package io.github.khaledabushamat.discount.catalog.domain;

public enum Category {
    GROCERY,
    NON_GROCERY
}